@@ -1570,4 +1570,5 @@ Special Thanks
     <Canvas Width="48" Height="48" Clip="F1 M 0,0L 48,0L 48,48L 0,48L 0,0" UseLayoutRounding="False" x:Key="appbar_xbox">
         <Path Width="32.6867" Height="32.0091" Canvas.Left="7.65667" Canvas.Top="6.49093" Stretch="Fill" Fill="{DynamicResource BlackBrush}" Data="F1 M 12,6.50001C 17.2911,6.31104 22.0109,9.12162 24,10.5052C 25.9891,9.12162 30.7089,6.31103 36,6.50001C 38,7.25 38.25,7.75002 38.25,7.75002C 38.25,7.75002 32.75,9.5 28.75,14.5C 34,21.25 41.25,30.5 40.25,38.5C 35,29.25 28.973,22.2759 24,19.3355C 19.027,22.2759 13,29.25 7.75,38.5C 6.75,30.5 14,21.25 19.25,14.5C 15.25,9.50001 9.74999,7.75002 9.74999,7.75002C 9.74999,7.75002 10,7.25 12,6.50001 Z " />
     </Canvas>
+
 </ResourceDictionary>
