@@ -186,6 +186,8 @@
     <Canvas x:Key="appbar_minus" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
         <Path Width="40" Height="30" Canvas.Left="18" Canvas.Top="23" Stretch="Fill" Fill="{DynamicResource BlackBrush}" Data="F1 M 19,38L 57,38L 57,44L 19,44L 19,38 Z "/>
     </Canvas>
-
+    <Canvas x:Key="data_format" Width="76.0106" Height="76.0106" Clip="F1 M 0,0L 76.0106,0L 76.0106,76.0106L 0,76.0106L 0,0">
+        <Path Width="38.0053" Height="38.0086" Canvas.Left="19.0027" Canvas.Top="18.9994" Stretch="Fill" Fill="{DynamicResource BlackBrush}" Data="F1 M 19.0027,33.2546L 28.504,33.2546L 28.504,36.4218L 30.0877,36.4218C 31.6713,35.3661 34.8382,34.3104 36.5977,32.155C 38.3572,29.9996 40.2927,26.7445 42.1401,24.897C 43.9851,23.0521 45.7423,22.6109 47.4993,22.1716L 47.4993,18.9994L 57.0007,18.9994L 57.0007,28.5007L 47.4993,28.5007L 47.4993,25.3387C 45.779,25.778 44.0586,26.2192 42.2248,28.0641C 40.3883,29.9116 38.4381,33.1667 36.6602,35.3221L 35.681,36.4218L 47.5066,36.4218L 47.5066,33.2547L 57.0079,33.2547L 57.0079,42.756L 47.5066,42.756L 47.5066,39.5889L 35.6811,39.5889C 36.0022,39.9219 36.3282,40.286 36.6602,40.6886C 38.4381,42.8439 40.3883,46.099 42.2248,47.9465C 44.0612,49.794 45.7839,50.2339 47.5066,50.6737L 47.5066,47.5066L 57.0079,47.5066L 57.0079,57.008L 47.5066,57.008L 47.5066,53.8409C 45.7471,53.401 43.9876,52.9611 42.1401,51.1136C 40.2927,49.2661 38.3572,46.0111 36.5977,43.8557C 34.8382,41.7003 31.6713,40.6446 30.0877,39.5889L 28.504,39.5889L 28.504,42.756L 19.0027,42.756L 19.0027,33.2546 Z "/>
+    </Canvas>
 
 </ResourceDictionary>
